Change height scaling to fit-content because revert-layer fixes height which can cause blank vertical spacing in smaller screens

--- a/mod_app/static/css/film.css
+++ b/mod_app/static/css/film.css
@@ -83,7 +83,7 @@
     @media screen and (max-width: 767px) {
       width: 100%;
       /*revert-layer scales the video/fallback image to fill up available space*/
-      height: revert-layer;
+      height: fit-content;
     }
   }
 
